2-k3s/17.remote-pi/cliproxy/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cliproxy-https
  namespace: remote-pi
  labels:
    app.kubernetes.io/name: cliproxy
    app.kubernetes.io/component: ingress
spec:
  entryPoints:
    - internal
  routes:
    - match: Host(`cliproxy.epaflix.com`)
      kind: Rule
      services:
        - name: cliproxy
          port: 8317
  tls:
    certResolver: cloudflare
    domains:
      - main: epaflix.com
        sans:
          - "*.epaflix.com"
